# simple-python-package

./: MANIFEST.in  README.md  pyproject.toml
MySimplePackage/: calculator.py
MySimplePackage/test/: test_calculator.py
pypackage/test/: test_calculator.py
simplepypackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simplepypackage/test/: test_calculator.py
