[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplepypackage"
version = "1.0.0"
authors = [
  { name="Author Name", email="name@gmail.com"},
]
description = "A demo package for the Python Packaging User Guide"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["dapro"]

[project.urls]
"Homepage" = "https://github.com/"
